[package]
name = "ybstacksampler"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
scraper = "0.12.0"
rayon = "1.5.1"
structopt = "0.3.26"
port_scanner = "0.1.5"
reqwest = { version = "0.11.10", features = ["blocking"] }
ctrlc = "3.2.1"
